--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=springmvc
+#hello.springmvc ???? ? ?? ?? ?? ??
+#spring.application.name=springmvc
+logging.level.root = info
+logging.level.hello.springmvc=debug
+
+
+# ????? debug Level?? ?????, ????? INFO Level? ??.
